# k8s-secrets-manager-app

./: .gitignore  README.md  main.py  pyproject.toml
secrets_manager/: app.py
static/: style.css
templates/: base.html  bulk_paste_review.html  error.html  index.html  show.html  show_all.html
