[project]
name = "k8s-secrets-manager-app" # Changed name slightly for clarity
version = "0.1.0"
description = "A local tool for managing Kubernetes secrets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
k8s-secret-manager = "secrets_manager.app:app"